Added tile block

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,66 @@
 @import 'colors';
 
+@import 'components/Card';
+
+@import 'screens/PropertyPage';
+
+html {
+  size: 16px;
+}
 body {
   background-color: $background;
+  margin: 0;
+  overflow-x: hidden;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+//.wrap {
+//  display: flex;
+//  flex-direction: column;
+//  align-items: center;
+//
+//  section {
+//    display: flex;
+//    flex: 1;
+//    flex-wrap: wrap;
+//    gap: 2rem;
+//    width: 60%;
+//
+//    .container {
+//      background: aqua;
+//      border: double;
+//      flex: 1;
+//    }
+//    .one {
+//      flex-grow: 4;
+//    }
+//  }
+//}
+
+@font-face {
+  font-family: "Lato-Black";
+  src: url(../fonts/Lato-Black.ttf);
+}
+@font-face {
+  font-family: "Lato-Light";
+  src: url(../fonts/Lato-Light.ttf);
+}
+@font-face {
+  font-family: "Lato-Regular";
+  src: url(../fonts/Lato-Regular.ttf);
+}
+@font-face {
+  font-family: "Lato-Italic";
+  src: url(../fonts/Lato-LightItalic.ttf);
+}
+@font-face {
+  font-family: "Lato-Bold";
+  src: url(../fonts/Lato-Bold.ttf);
 }
