--- a/src/assets/styles/screens/PropertyPage.scss
+++ b/src/assets/styles/screens/PropertyPage.scss
@@ -1,5 +1,11 @@
 @import 'src/assets/styles/colors';
 
+@media screen and (max-device-width: 425px) {
+  .container {
+    margin: 0 10% !important;
+  }
+}
+
 .page {
   display: flex;
   flex-direction: column;
