--- a/src/assets/styles/components/Card.scss
+++ b/src/assets/styles/components/Card.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  justify-content: space-between;
 
   h1, h2, h3, h4, p, span, button {
     margin: 0;
@@ -24,7 +25,6 @@
     text-transform: uppercase;
     font-weight: bold;
     padding: 0;
-    flex: 1;
   }
   h3 {
     color: $grey;
@@ -62,6 +62,7 @@
     padding: 0.875rem 1.25rem;
     font-weight: normal;
     cursor: pointer;
+    flex: 1;
   }
   .arrow {
     background-color: $white;
