Added banner component

--- a/src/assets/styles/screens/PropertyPage.scss
+++ b/src/assets/styles/screens/PropertyPage.scss
@@ -2,7 +2,7 @@
 
 @media screen and (max-device-width: 425px) {
   .container {
-    margin: 0 10% !important;
+    margin: 1.5rem 10% !important;
   }
 }
 
@@ -16,6 +16,6 @@
     flex: 1;
     flex-wrap: wrap;
     gap: 2rem;
-    margin: 0 20%;
+    margin: 1.5rem 20%;
   }
 }
