--- a/src/assets/styles/components/Map.scss
+++ b/src/assets/styles/components/Map.scss
@@ -1,12 +1,17 @@
+@import 'src/assets/styles/colors';
+
 .map_container {
-  margin: 4rem 0;
+  padding-top: 4rem;
+  margin-bottom: 4rem;
   flex: 1;
   width: 100%;
   height: 30rem;
+  background-color: $light-grey;
 
-  h2 {
+  .title_wrap {
     padding-left: 20%;
   }
+
   .map {
     background-size: cover !important;
     background-position: top !important;
@@ -17,7 +22,9 @@
 }
 
 @media screen and (max-device-width: 425px) {
-  h2 {
-    padding-left: 10% !important;
+  .map_container {
+    .title_wrap {
+      padding-left: 10%;
+    }
   }
 }
