--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,6 +3,7 @@
 @import 'components/Card';
 @import 'components/Banner';
 @import 'components/Map';
+@import 'components/MoreInformationForm';
 
 @import 'screens/PropertyPage';
 
@@ -10,9 +11,9 @@ html {
   size: 16px;
 }
 body {
-  background-color: $background;
   margin: 0;
   overflow-x: hidden;
+  background-color: $white;
 }
 .row {
   display: flex;
@@ -22,38 +23,52 @@ body {
   display: flex;
   flex-direction: column;
 }
+h1, h2, h3, h4, p, span, button {
+  margin: 0;
+  padding-bottom: 1.25rem;
+  font-size: 1.5rem;
+  color: $dark-blue;
+  font-family: "Lato-Regular", serif;
+  font-weight: normal;
+}
+h1 {
+  font-family: "Lato-Black", serif;
+}
 h2 {
   font-size: 1.125rem;
   text-transform: uppercase;
   font-weight: bold;
-  margin: 0;
-  padding-bottom: 1.25rem;
-  color: $dark-blue;
-  font-family: "Lato-Regular", serif;
 }
-
-//.wrap {
-//  display: flex;
-//  flex-direction: column;
-//  align-items: center;
-//
-//  section {
-//    display: flex;
-//    flex: 1;
-//    flex-wrap: wrap;
-//    gap: 2rem;
-//    width: 60%;
-//
-//    .container {
-//      background: aqua;
-//      border: double;
-//      flex: 1;
-//    }
-//    .one {
-//      flex-grow: 4;
-//    }
-//  }
-//}
+h3 {
+  color: $grey;
+  font-family: "Lato-Italic", serif;
+}
+h4 {
+  color: $grey;
+  font-size: 1.05rem;
+  padding: 0;
+}
+p, span {
+  color: $grey;
+  font-size: 1rem;
+  font-family: "Lato-Light", serif;
+  text-align: justify;
+  padding: 0;
+}
+span {
+  font-size: 0.875rem;
+}
+button {
+  background-color: $light-blue;
+  border: none;
+  color: $white;
+  padding: 0.875rem 1.25rem;
+  font-weight: normal;
+  cursor: pointer;
+  flex: 1;
+  font-size: 1.125rem;
+  text-transform: uppercase;
+}
 
 @font-face {
   font-family: "Lato-Black";
