--- a/src/assets/styles/screens/PropertyPage.scss
+++ b/src/assets/styles/screens/PropertyPage.scss
@@ -5,7 +5,7 @@
     padding: 1.5rem 10% !important;
   }
   .container_2 {
-    margin: 1.5rem 10% !important;
+    margin: 1.5rem 10% 5rem 10% !important;
   }
 }
 
