--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,5 +1,6 @@
 $white: #fff;
 $light-grey: #f1f1f1;
 $grey: #555555;
-$dark-blue: #1e4f60;
+$dark-blue: #25333c;
+$blue: #1e4f60;
 $light-blue: #ade1e5;
