--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,6 +6,7 @@
 @import 'components/MoreInformationForm';
 @import 'components/Footer';
 @import 'components/Header';
+@import 'components/Carousel';
 
 @import 'screens/PropertyPage';
 
