--- a/src/assets/styles/screens/PropertyPage.scss
+++ b/src/assets/styles/screens/PropertyPage.scss
@@ -4,9 +4,6 @@
   .container {
     padding: 1.5rem 10% !important;
   }
-  .container_2 {
-    margin: 1.5rem 10% 5rem 10% !important;
-  }
 }
 
 .page {
@@ -14,17 +11,12 @@
   flex-direction: column;
   align-items: center;
 
-  .container, .container_2 {
+  .container {
     display: flex;
     flex: 1;
     flex-wrap: wrap;
     gap: 2rem;
     padding: 1.5rem 20%;
     background-color: $light-grey;
-  }
-  .container_2 {
-    background-color: $white;
-    margin: 1.5rem 25%;
-    padding: 0;
   }
 }
