--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -11,6 +11,7 @@
 @import 'components/Header';
 @import 'components/Carousel';
 @import 'components/Slide';
+@import 'components/Calendar';
 
 @import 'screens/PropertyPage';
 
