--- a/src/assets/styles/components/Calendar.scss
+++ b/src/assets/styles/components/Calendar.scss
@@ -1,7 +1,8 @@
 @import 'src/assets/styles/colors';
 
 table {
-  width: 16rem;
+  width: 100%;
+  min-width: 13rem;
 
   td {
     width: 2.5rem;
@@ -35,7 +36,7 @@ tbody {
   tr {
     background-color: $light-grey;
     td {
-      padding: 0.6rem 0;
+      padding: 0.6rem 0.1rem;
       font-size: 0.875rem;
       color: $grey;
       font-family: "Lato-Regular", serif;
