--- a/src/assets/styles/components/GridTiles.scss
+++ b/src/assets/styles/components/GridTiles.scss
@@ -4,12 +4,32 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
+  gap: 2rem;
 
+  h3, h4 {
+    color: $blue;
+  }
   h3 {
     font-family: "Lato-Light", serif;
+    padding-bottom: 0.5rem;
+    font-weight: bold;
 
     div {
       text-transform: uppercase;
+    }
+  }
+  h4 {
+    font-size: 0.875rem;
+  }
+  .sort_block {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    justify-content: space-between;
+    flex: 1;
+
+    span {
+      color: $grey;
     }
   }
 }
