--- a/src/assets/styles/components/Input.scss
+++ b/src/assets/styles/components/Input.scss
@@ -1,5 +1,11 @@
+@import 'src/assets/styles/colors';
+
 .input {
   height: 3rem;
   display: flex;
-  min-width: 0;
+  min-width: 5rem;
+  font-size: 0.8rem;
+  padding-right: 1rem;
+  color: $grey;
+  font-family: "Lato-Light", serif;
 }
