--- a/src/assets/styles/components/Filters.scss
+++ b/src/assets/styles/components/Filters.scss
@@ -54,6 +54,9 @@
   flex-wrap: wrap;
   gap: 1rem;
   flex-direction: column;
+  -webkit-box-shadow: 0 20px 13px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 20px 13px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 20px 13px 0 rgba(0, 0, 0, 0.1);
 
   span {
     display: flex;
